--- a/style.css
+++ b/style.css
@@ -2183,6 +2183,7 @@ h2.fun-title {
 
 @media only screen and (max-width: 414px) {
 	.top-tickets-container {
+		display: block;
 		grid-template-columns: 100%;
 		grid-template-rows: repeat(2, 100%);
 	}
